fix: reinstate position relative so that z-index works!!

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 .tl-wrapper {
   width: 100%;
   float: left;
+  position: relative;
 }
 
 .tl-wrapper + .tl-wrapper {
